prima versione navbar

--- a/page1.html
+++ b/page1.html
@@ -8,43 +8,35 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>My website</title>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg bg-light">
+<body class="corpo">
+  <nav class="navbar navbar-expand-lg nav1">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">TOMMASO CITTADINO
+      <img src="images/logopw2.svg" width="80px" class="mylogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button"
+      <!--   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="nav-item">
+            <a class="nav-link" href="#" style="margin-left: 55px;">Link</a>
+          </div>
+        </div>   -->
+        <div class="d-flex">
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle mx-2" href="#" role="button"
              data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              MENU
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+            </div>
+          </div>
       </div>
     </div>
   </nav>
