hamburger icon setted

--- a/page1.html
+++ b/page1.html
@@ -13,31 +13,25 @@
   <nav class="navbar navbar-expand nav1">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><h4 class='d-none d-md-inline' style='display: inline;'>TOMMASO CITTADINO</h4>
-      <img src="images/logopw2.svg" width="80px" class="mylogo"></a>
+        <h4 class='d-md-none' style='display: inline;'>TC</h4>
+      <!--  <img src="images/logopw2.svg" width="80px" class="mylogo">  --> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!--   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav me-auto mb-2 mb-lg-0">
-          <div class="nav-item">
-            <a class="nav-link" href="#" style="margin-left: 55px;">Link</a>
-          </div>
-        </div>   -->
-        <div class="d-flex">
-          <div class="nav-item">
-            <a class="nav-link mx-2" href="#" role="button" aria-expanded="false">
-              <h5 class="d-none d-md-inline" style="display: inline;">MENU</h5> <i data-feather="menu" class="mb-2 ms-2"></i>
-            </a>
-           <!-- <ul class="dropdown-menu">
-              <--! <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>  -->
-            </div>
-          </div>
-      </div>
+
+      <a class="nav-link mx-2" href="#" role="button" aria-expanded="false">
+        <div class="right-nav scale"> 
+              <h5 class="d-none d-md-inline my-3" style="display: block;">MENU</h5>
+              <div class="ham">
+                <img src="images/minus.svg" width="40" class="minus prova1 ms-2">
+                <img src="images/minus.svg" width="40" class="minus prova3 ms-2">
+                <img src="images/minus.svg" width="40" class="minus prova2 ms-2">
+              </div>
+           
+        </div> 
+      </a>
     </div>
   </nav>
 
