--- a/page1.html
+++ b/page1.html
@@ -21,19 +21,46 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a class="nav-link mx-2" href="#" role="button" aria-expanded="false">
+      <a class="nav-link mx-2 button1" href="#popup1" role="button" aria-expanded="false">
         <div class="right-nav scale"> 
-              <h5 class="d-none d-md-inline my-3" style="display: block;">MENU</h5>
+              <h5 class="my-3" style="display: block;">MENU</h5>
               <div class="ham">
                 <img src="images/minus.svg" width="40" class="minus prova1 ms-2">
                 <img src="images/minus.svg" width="40" class="minus prova3 ms-2">
                 <img src="images/minus.svg" width="40" class="minus prova2 ms-2">
-              </div>
-           
+              </div> 
         </div> 
       </a>
     </div>
+
+      <div id='popup1' class="popup">
+        <a href="#" class="lgo"><h4 class='d-none d-md-inline content'>TOMMASO CITTADINO</h4>
+          <h4 class='d-md-none content' style='display: inline;'>TC</h4></a>
+        <a href="#"><img class="content close" src="images/x.svg" style="filter: invert(100%) sepia(0%) saturate(7462%) hue-rotate(29deg) brightness(112%) contrast(109%);"></a>
+        <div class="content menu2 text-center">
+          <h6 class='text-center' style="margin-top: 10%; margin-left: 25px;">MENU</h6>
+          <ul>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Ipsum</a></li>
+          </ul>
+        </div>
+      </div>
   </nav>
+
+  <section  class="principale">
+    <h6>SOMETHING ABOUT ME</h6>
+    <h3>I'm Tommaso Cittadino, a full stack developer
+      student who want to become ...
+    </h3>
+   
+  </section>
+
+
+
+
 
   <script>
     feather.replace()
