--- a/page1.html
+++ b/page1.html
@@ -12,6 +12,7 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <title>Tommaso Cittadino</title>
 </head>
+
 <body class="corpo">
   <nav class="navbar navbar-expand nav1">
     <div class="container-fluid">
@@ -41,7 +42,7 @@
           <h4 class='d-md-none content' style='display: inline;'>TC</h4></a>
         <a href="#"><img class="content close" src="images/x.svg" style="filter: invert(100%) sepia(0%) saturate(7462%) hue-rotate(29deg) brightness(112%) contrast(109%);"></a>
         <div class="content menu2 text-center">
-          <h6 class='text-center' style="margin-top: 10%;">MENU</h6>
+          <h6 class='text-center clrtext' style="margin-top: 10%;">MENU</h6>
           <ul>
             <li><a href="#aboutme">About me</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -64,8 +65,8 @@
     </h3>
    </div>
    <div class="right">
-      <img id="imm1" class='pics1' src="images/xx2.png">
-      <img id='imm2' class="pics1" src="images/xx2.png">
+      <img id="imm1" class='pics1' src="images/xx3.png">
+      <img id='imm2' class="pics1" src="images/xx3.png">
    </div>
   </section>
 
