--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Full Stack Developer | Building websites with HTML,
+   CSS, JavaScript, ReactJS, NodeJS and Wordpress.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="images/logo3.png">
@@ -9,23 +11,23 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-  <title>Tommaso Cittadino</title>
+  <title>Tommaso Cittadino | Full Stack Developer</title>
 </head>
 
 <body>
 
-  <div class="primapagina">
+  <div class="firstPage" id="firstPage">
   <nav class="nav1">
     <div class="cfd">
-      <a class="brand standardlink" href="#">
-        <h4 class="bigdisp">TOMMASO CITTADINO</h4>
-        <h4 class="smalldisp">TC</h4>
+      <a class="brand standardLink" href="#">
+        <h4 class="bigDisplay">TOMMASO CITTADINO</h4>
+        <h4 class="smallDisplay">TC</h4>
         <!--  <img src="images/logopw2.svg" width="80px" class="mylogo">  --> 
       </a>
-        <div class="rightnav">
-          <a class="standardlink" href="#popup1" role="button" aria-expanded="false">
-            <div class="navbarmenu">
-              <h4 class="bigdisp">MENU</h4>
+        <div class="rightNav">
+          <a class="standardLink" href="#popup1" role="button" aria-expanded="false">
+            <div class="navbarMenu">
+              <h4 class="bigDisplay">MENU</h4>
               <div class="ham">
                 <img src="images/minus.svg" width="40" class="minus prova1">
                 <img src="images/minus.svg" width="40" class="minus prova3">
@@ -37,35 +39,35 @@
     </div>
   </nav>
 
-  <section id="aboutme" class="principale">
-    <div class="left leftsm">
-    <h6 class="clrtext">SOMETHING ABOUT ME</h6>
+  <section id="aboutMe" class="main">
+    <div class="left leftSmall">
+    <h2 class="color3Text">SOMETHING ABOUT ME</h2>
     <h1>Full stack web developer</h1>
-    <h3>I'm Tommaso Cittadino, a full stack developer
+    <p>I'm Tommaso Cittadino, a full stack developer
       student who is working hard to become an expert in the field of web developing.
       I'm focusing my studies in responsive websites and functional
-       user interface following a <a href="#progressbar">roadmap</a>.
-    </h3>
+       user interface following a <a href="#progressBar">roadmap</a>.
+    </p>
    </div>
-   <div class="right rightsm">
-      <img id="imm1" class='pics1' src="images/xx3.png">
-      <img id='imm2' class="pics1" src="images/xxsm.png">
+   <div class="right rightSmall">
+      <img alt="Tommaso Cittadino personal pic" id="imm1" class='pics1' src="images/xx3.png">
+      <img alt="Tommaso Cittadino personal pic" id='imm2' class="pics1" src="images/xxsm.png">
    </div>
   </section>
 
-  <div class="separa"><a href='#projects'><img src="images/grid.svg"></a></div>
+  <div class="divide"><a href='#projects'><img src="images/grid.svg"></a></div>
   </div>
 
   <section id='popup1' class="popup">
-        <a href="#" class="lgo brand"><h4 class='content bigdisp'>TOMMASO CITTADINO</h4>
-          <h4 class='content smalldisp'>TC</h4></a>
+        <a href="#" class="lgo brand"><h4 class='content bigDisplay'>TOMMASO CITTADINO</h4>
+          <h4 class='content smallDisplay'>TC</h4></a>
         <a href="#"><img class="content close" src="images/x.svg" style="filter: invert(100%) sepia(0%) saturate(7462%) hue-rotate(29deg) brightness(112%) contrast(109%);"></a>
         <div class="content menu2">
-          <h6 class='clrtext' style="margin-top: 10%;">MENU</h6>
+          <h2 class='color3Text'>MENU</h2>
           <ul>
             <li><a href="#">About me</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#progressbar">Roadmap</a></li>
+            <li><a href="#progressBar">Roadmap</a></li>
             <li><a href="#contact" >Contact</a></li>
             <li><a href="https://github.com/cittaz" target="_blank">Git page</a></li>
           </ul>
@@ -73,117 +75,117 @@
   </section>
 
   <section id='projects'>
-    <div class="secondaria">
+    <div class="minor">
       <div class="left">
-        <h6 class="clrtext">MY WORKS</h6>
-        <h1 class="bigtext">Projects</h1>
+        <h2 class="color3Text">MY WORKS</h2>
+        <h2 class="bigText">Projects</h2>
       </div>
       <div class="right"><!-- blank --></div>
     </div>
     <div class="grid">
       <div class="roww">
-      <div class="el el1">
+      <div class="el el1" ontouchstart=''>
         <div class="inside">
-          <h6 class="clrtext">MY FIRST WEBSITE</h6>
-          <h3 class="usualtext">The website you're now scrolling it's my first approach at web developing.<br>
+          <h2 class="color3Text">MY FIRST WEBSITE</h2>
+          <p class="usualText">The website you're now scrolling it's my first approach at web developing.<br>
             This is my personal portfolio website which I also use as a lab to test new features,
             constantly updated as I learn new skills.<br>At this time is entirely realized only with HTML and CSS
             without the help of any toolkit (see bootstrap).
-          </h3>
+          </p>
         </div>
       </div>
-      <div class="el el2">
+      <div class="el el2" ontouchstart=''>
         <div class="inside">
-           <h6 class="clrtext">MY SECOND PROJECT</h6>
-           <h3 class="usualtext">This is the container of my second project.<br>Here I'm going to use
-            basic Javascript to build a calculator.</h3>
+           <h2 class="color3Text">MY SECOND PROJECT</h2>
+           <p class="usualText">This is the container of my second project.<br>Here I'm going to use
+            basic Javascript to build a calculator.</p>
         </div>
       </div>
       </div>
       <div class="roww roww2">
        <div class="el el3">
          <div class="inside">
-          <h6 class="clrtext">202x-202x</h6>
-          <h3 class="usualtext">Project name <br> Short description</h3>
+          <h2 class="color3Text">202x-202x</h2>
+          <p class="usualText">Project name <br> Short description</p>
          </div>
        </div>
         <div class="el el4">
           <div class="inside">
-           <h6 class="clrtext">202x-202x</h6>
-           <h3 class="usualtext">Project name <br> Short description</h3>
+           <h2 class="color3Text">202x-202x</h2>
+           <p class="usualText">Project name <br> Short description</p>
           </div>
         </div>
        </div>
        </div>
-       <div class="separa"><a href='#progressbar'><img src="images/grid.svg"></a></div>
+       <div class="divide"><a href='#progressBar'><img src="images/grid.svg"></a></div>
   </section>
 
-  <section id="progressbar" class="terza">
+  <section id="progressBar" class="third">
     <div class="titolo3">
-      <h6 class="clrtext">ROADMAP</h6>
-      <h1 class="bigtext">Progress bar</h1>
-      <h3 class="usualtext">Click on the icons to get more info.</h3>
+      <h2 class="color3Text">ROADMAP</h2>
+      <h2 class="bigText">Progress bar</h2>
+      <p class="usualText">Click on the icons to get more info.</p>
     </div>
     <div class="progress1">
       <div class="barx bar1">
         <input type="checkbox" id="expand-togglexx">
-        <div class="kkk"><div id='expp1' class="espandibile espandibile1"><h5><strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser.</h5></div></div>
+        <div><div id='expp1' class="ext ext1"><h5><strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser.</h5></div></div>
         <label for="expand-togglexx" id="expand-buttonxx">
-          <img class="htmllogo" src="images/htmllogo.svg">
+          <img alt="HTML" class="logo htmllogo" src="images/htmllogo.svg">
         </label>  
       </div>
       <div class="barx bar2">
         <input type="checkbox" id="expand-togglexx2">
-        <div><div class="espandibile espandibile2"><h5><strong>CSS</strong> is a style sheet language used for describing the presentation of a document.</h5></div></div>
+        <div><div class="ext ext2"><h5><strong>CSS</strong> is a style sheet language used for describing the presentation of a document.</h5></div></div>
         <label for="expand-togglexx2" id="expand-buttonxx2">
-          <img class='csslogo' src="images/csslogo.svg">
+          <img alt="CSS" class='logo csslogo' src="images/csslogo.svg">
         </label>
       </div>
       <div class="barx bar3">
         <input type="checkbox" id="expand-togglexx3">
-        <div><div class="espandibile espandibile3"><h5><strong>JavaScript (JS)</strong> is a programming language that enables you to create dynamic web pages content.</h5></div></div>
+        <div><div class="ext ext3"><h5><strong>JavaScript (JS)</strong> is a programming language that enables you to create dynamic web pages content.</h5></div></div>
         <label for="expand-togglexx3" id="expand-buttonxx3">
-          <img class="javascriptlogo" src="images/javascriptlogo.svg">
+          <img alt="JavaScript" class="logo javascriptlogo" src="images/javascriptlogo.svg">
         </label>
       </div>
       <div class="barx bar4">
         <input type="checkbox" id="expand-togglexx4">
-        <div><div class="espandibile espandibile4"><h5><strong>React</strong> is a declarative, efficient, and flexible JavaScript library for building user interfaces.</h5></div></div>
+        <div><div class="ext ext4"><h5><strong>React</strong> is a declarative, efficient, and flexible JavaScript library for building user interfaces.</h5></div></div>
         <label for="expand-togglexx4" id="expand-buttonxx4">
-          <img class="reactjslogo" src="images/reactlogo.svg">
+          <img alt="ReactJS" class="logo reactjslogo" src="images/reactlogo.svg">
         </label> 
       </div>
       <div class="barx bar5">
         <input type="checkbox" id="expand-togglexx5">
-        <div><div class="espandibile espandibile5"><h5><strong>Node.js</strong> is a runtime environment for building fast and scalable server-side and networking applications.</h5></div></div>
+        <div><div class="ext ext5"><h5><strong>Node.js</strong> is a runtime environment for building fast and scalable server-side and networking applications.</h5></div></div>
         <label for="expand-togglexx5" id="expand-buttonxx5">
-          <img class="nodejslogo" src="images/nodejslogo.svg">
+          <img alt="NodeJS" class="logo nodejslogo" src="images/nodejslogo.svg">
         </label>
       </div>
       <div class="barx bar6">
         <input type="checkbox" id="expand-togglexx6">
-        <div><div class="espandibile espandibile6"><h5><strong>WordPress</strong>  is a free and open-source content management system (CMS). Features include a plugin architecture and a template system.</h5></div></div>
+        <div><div class="ext ext6"><h5><strong>WordPress</strong>  is a free and open-source content management system (CMS). Features include a plugin architecture and a template system.</h5></div></div>
         <label for="expand-togglexx6" id="expand-buttonxx6">
-          <img class="wordpresslogo" src="images/wordpresslogo.svg">
+          <img alt="Wordpress" class="logo wordpresslogo" src="images/wordpresslogo.svg">
         </label>
       </div>
       <div class="barx bar7">
         <input type="checkbox" id="expand-togglexx7">
-        <div><div class="espandibile espandibile7"><h5><a class="standardlink" href='https://www.start2impact.it/' target="_blank"><strong>Start2impact</strong></a> full stack developer Master!<br>At this point I will define myself a full-fledged junior web developer.</h5></div></div>
+        <div><div class="ext ext7"><h5><a class="standardLink" href='https://www.start2impact.it/' target="_blank"><strong>Start2impact</strong></a> full stack developer Master!<br>At this point I will define myself a full-fledged junior web developer.</h5></div></div>
         <label for="expand-togglexx7" id="expand-buttonxx7">
-          <img class="stilogo" src="images/sti.svg">
+          <img alt="Start2Impact" class="logo stilogo" src="images/sti.svg">
         </label>
       </div>
     </div>
-    <div class="separa"><a href='#contact'><img src="images/grid.svg"></a></div>
+    <div class="divide"><a href='#contact'><img src="images/grid.svg"></a></div>
     <div class="kkx"><h5><strong>WordPress</strong>  is a free and open-source content management system (CMS). Features include a plugin architecture and a template system.</h5></div>
   </section>
 
-  <section id='contact' class="quarta">
-    <h6 class="clrtext">CONTACT</h6>
-    <h1 class="bigtext">Get in touch</h1>
-    <h3 class="usualtext">Feel free to contact me, I'll be pleased to answer any questions or to just have a chat.</h3>
-    <h3 class="usualtext" style="font-size: 12px;">Still working on the backend, write me an email instead of using the form.</h3>
+  <section id='contact' class="fourth">
+    <h2 class="color3Text">CONTACT</h2>
+    <h2 class="bigText">Get in touch</h2>
+    <p class="usualText">Feel free to contact me, I'll be pleased to answer any questions or to just have a chat.</p>
+    <p class="usualText" style="font-size: 16px;">Still working on the backend, write me an email instead of using the form.</p>
     <div class="formz">
       <form>
         <fieldset>
@@ -203,21 +205,21 @@
   </section>
 
   <footer>
-    <div class="ft0">
-      <div class="ft1">
-        <h1>Follow Me</h1>
+    <div class="footer0">
+      <div class="footer1">
+        <h2>Follow Me</h2>
         <div class="iconx">
-          <a href="https://www.instagram.com/tommasocitta/" target="_blank"><img src="images/instagram.svg" alt=""></a>
-          <a href="https://www.linkedin.com/in/tommasocittadino/" target="_blank"><img src="images/linkedin.svg" alt=""></a>
-          <a href="https://github.com/cittaz" target="_blank"><img src="images/github.svg" alt=""></a>
+          <a href="https://www.instagram.com/tommasocitta/" target="_blank"><img src="images/instagram.svg" alt="instagram logo"></a>
+          <a href="https://www.linkedin.com/in/tommasocittadino/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn logo"></a>
+          <a href="https://github.com/cittaz" target="_blank"><img src="images/github.svg" alt="Github logo"></a>
         </div>
         <div class="contact2">
-          <h3>Email: <a href = "mailto: tom2001.city@gmail.com">tom2001.city@gmail.com</a></h3>
-          <h3>Phone: (+39) 3774065828</h3>
+          <p>Email: <a href = "mailto: tommasocittadino.dev">tommasocittadino.dev@gmail.com</a></p>
+          <p>Phone: (+39) 3774065828</p>
         </div>
       </div>
-      <div class="ft2">
-        <h1>Important Links</h1>
+      <div class="footer2">
+        <h2>Important Links</h2>
         <div class="linklist">
           <ul>
             <li><a href="#">About Me</a></li>
@@ -227,7 +229,7 @@
             <li><a href="#">Blog</a></li>
           </ul>
         </div>
-        <h3 style="font-size: 12px;">Copyright ©2022, All right reserved</h3>
+        <h5>Copyright ©2022, All right reserved</h5>
       </div>
     </div>
   </footer>
