Big fixes after project review

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    CSS, JavaScript, ReactJS, NodeJS and Wordpress.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="images/logo3.png">
-  <link rel="stylesheet" href="css/styles1.css">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+  <link rel="stylesheet" href="assets/css/styles1.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,9 +29,9 @@
             <div class="navbarMenu">
               <h4 class="bigDisplay">MENU</h4>
               <div class="ham">
-                <img src="images/minus.svg" width="40" class="minus prova1">
-                <img src="images/minus.svg" width="40" class="minus prova3">
-                <img src="images/minus.svg" width="40" class="minus prova2">
+                <img src="assets/images/minus.svg" width="40" class="minus prova1">
+                <img src="assets/images/minus.svg" width="40" class="minus prova3">
+                <img src="assets/images/minus.svg" width="40" class="minus prova2">
               </div>
             </div>
           </a> 
@@ -50,18 +50,18 @@
     </p>
    </div>
    <div class="right rightSmall">
-      <img alt="Tommaso Cittadino personal pic" id="imm1" class='pics1' src="images/xx3.png">
-      <img alt="Tommaso Cittadino personal pic" id='imm2' class="pics1" src="images/xxsm.png">
+      <img alt="Tommaso Cittadino personal pic" id="imm1" class='pics1' src="assets/images/xx3.png">
+      <img alt="Tommaso Cittadino personal pic" id='imm2' class="pics1" src="assets/images/xxsm.png">
    </div>
   </section>
 
-  <div class="divide"><a href='#projects'><img src="images/grid.svg"></a></div>
+  <div class="divide"><a href='#projects'><img src="assets/images/grid.svg"></a></div>
   </div>
 
   <section id='popup1' class="popup">
         <a href="#" class="lgo brand"><h4 class='content bigDisplay'>TOMMASO CITTADINO</h4>
           <h4 class='content smallDisplay'>TC</h4></a>
-        <a href="#"><img class="content close" src="images/x.svg" style="filter: invert(100%) sepia(0%) saturate(7462%) hue-rotate(29deg) brightness(112%) contrast(109%);"></a>
+        <a href="#"><img class="content close" src="assets/images/x.svg" style="filter: invert(100%) sepia(0%) saturate(7462%) hue-rotate(29deg) brightness(112%) contrast(109%);"></a>
         <div class="content menu2">
           <h2 class='color3Text'>MENU</h2>
           <ul>
@@ -117,7 +117,7 @@
         </div>
        </div>
        </div>
-       <div class="divide"><a href='#progressBar'><img src="images/grid.svg"></a></div>
+       <div class="divide"><a href='#progressBar'><img src="assets/images/grid.svg"></a></div>
   </section>
 
   <section id="progressBar" class="third">
@@ -131,53 +131,53 @@
         <input type="checkbox" id="expand-togglexx">
         <div><div id='expp1' class="ext ext1"><h5><strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser.</h5></div></div>
         <label for="expand-togglexx" id="expand-buttonxx">
-          <img alt="HTML" class="logo htmllogo" src="images/htmllogo.svg">
+          <img alt="HTML" class="logo htmllogo" src="assets/images/htmllogo.svg">
         </label>  
       </div>
       <div class="barx bar2">
         <input type="checkbox" id="expand-togglexx2">
         <div><div class="ext ext2"><h5><strong>CSS</strong> is a style sheet language used for describing the presentation of a document.</h5></div></div>
         <label for="expand-togglexx2" id="expand-buttonxx2">
-          <img alt="CSS" class='logo csslogo' src="images/csslogo.svg">
+          <img alt="CSS" class='logo csslogo' src="assets/images/csslogo.svg">
         </label>
       </div>
       <div class="barx bar3">
         <input type="checkbox" id="expand-togglexx3">
         <div><div class="ext ext3"><h5><strong>JavaScript (JS)</strong> is a programming language that enables you to create dynamic web pages content.</h5></div></div>
         <label for="expand-togglexx3" id="expand-buttonxx3">
-          <img alt="JavaScript" class="logo javascriptlogo" src="images/javascriptlogo.svg">
+          <img alt="JavaScript" class="logo javascriptlogo" src="assets/images/javascriptlogo.svg">
         </label>
       </div>
       <div class="barx bar4">
         <input type="checkbox" id="expand-togglexx4">
         <div><div class="ext ext4"><h5><strong>React</strong> is a declarative, efficient, and flexible JavaScript library for building user interfaces.</h5></div></div>
         <label for="expand-togglexx4" id="expand-buttonxx4">
-          <img alt="ReactJS" class="logo reactjslogo" src="images/reactlogo.svg">
+          <img alt="ReactJS" class="logo reactjslogo" src="assets/images/reactlogo.svg">
         </label> 
       </div>
       <div class="barx bar5">
         <input type="checkbox" id="expand-togglexx5">
         <div><div class="ext ext5"><h5><strong>Node.js</strong> is a runtime environment for building fast and scalable server-side and networking applications.</h5></div></div>
         <label for="expand-togglexx5" id="expand-buttonxx5">
-          <img alt="NodeJS" class="logo nodejslogo" src="images/nodejslogo.svg">
+          <img alt="NodeJS" class="logo nodejslogo" src="assets/images/nodejslogo.svg">
         </label>
       </div>
       <div class="barx bar6">
         <input type="checkbox" id="expand-togglexx6">
         <div><div class="ext ext6"><h5><strong>WordPress</strong>  is a free and open-source content management system (CMS). Features include a plugin architecture and a template system.</h5></div></div>
         <label for="expand-togglexx6" id="expand-buttonxx6">
-          <img alt="Wordpress" class="logo wordpresslogo" src="images/wordpresslogo.svg">
+          <img alt="Wordpress" class="logo wordpresslogo" src="assets/images/wordpresslogo.svg">
         </label>
       </div>
       <div class="barx bar7">
         <input type="checkbox" id="expand-togglexx7">
         <div><div class="ext ext7"><h5><a class="standardLink" href='https://www.start2impact.it/' target="_blank"><strong>Start2impact</strong></a> full stack developer Master!<br>At this point I will define myself a full-fledged junior web developer.</h5></div></div>
         <label for="expand-togglexx7" id="expand-buttonxx7">
-          <img alt="Start2Impact" class="logo stilogo" src="images/sti.svg">
+          <img alt="Start2Impact" class="logo stilogo" src="assets/images/sti.svg">
         </label>
       </div>
     </div>
-    <div class="divide"><a href='#contact'><img src="images/grid.svg"></a></div>
+    <div class="divide"><a href='#contact'><img src="assets/images/grid.svg"></a></div>
     <div class="kkx"><h5><strong>WordPress</strong>  is a free and open-source content management system (CMS). Features include a plugin architecture and a template system.</h5></div>
   </section>
 
@@ -185,9 +185,8 @@
     <h2 class="color3Text">CONTACT</h2>
     <h2 class="bigText">Get in touch</h2>
     <p class="usualText">Feel free to contact me, I'll be pleased to answer any questions or to just have a chat.</p>
-    <p class="usualText" style="font-size: 16px;">Still working on the backend, write me an email instead of using the form.</p>
     <div class="formz">
-      <form>
+      <form action="https://formsubmit.co/tommasocittadino.dev@gmail.com" method="POST">
         <fieldset>
           <div class="formstyle0">
             <div class="formstyle1">
@@ -209,9 +208,9 @@
       <div class="footer1">
         <h2>Follow Me</h2>
         <div class="iconx">
-          <a href="https://www.instagram.com/tommasocitta/" target="_blank"><img src="images/instagram.svg" alt="instagram logo"></a>
-          <a href="https://www.linkedin.com/in/tommasocittadino/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn logo"></a>
-          <a href="https://github.com/cittaz" target="_blank"><img src="images/github.svg" alt="Github logo"></a>
+          <a href="https://www.instagram.com/tommasocitta/" target="_blank"><img src="assets/images/instagram.svg" alt="instagram logo"></a>
+          <a href="https://www.linkedin.com/in/tommasocittadino/" target="_blank"><img src="assets/images/linkedin.svg" alt="LinkedIn logo"></a>
+          <a href="https://github.com/cittaz" target="_blank"><img src="assets/images/github.svg" alt="Github logo"></a>
         </div>
         <div class="contact2">
           <p>Email: <a href = "mailto: tommasocittadino.dev">tommasocittadino.dev@gmail.com</a></p>
